@startuml

title __CARD's Class Diagram__\n

  namespace gamesource {
    namespace battleState.card {
      abstract class gamesource.battleState.card.AttackCard {
          # damage : int
          # times : int
          + AttackCard()
          + getDamage()
          + getTimes()
          + setDamage()
          + setTimes()
          + use()
          + use()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      enum PROPERTY {
        FIRE
        GOLD
        NONE
        SOIL
        WATER
        WOOD
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      class gamesource.battleState.card.Card {
          # AOE : boolean
          # ethereal : boolean
          # exhaust : boolean
          # intrinsic : boolean
          # upgraded : boolean
          - cost : int
          - description : String
          - name : String
          - path : String
          - unchangeName : String
          + Card()
          + Card()
          + clone()
          + clone()
          + getCardName()
          + getCost()
          + getDescription()
          + getOccupation()
          + getPath()
          + getRarity()
          + getType()
          + getUnchangeName()
          + isAOE()
          + isEthereal()
          + isExhaust()
          + isIntrinsic()
          + isUpgraded()
          + reset()
          + setAOE()
          + setCardName()
          + setCost()
          + setDescription()
          + setEthereal()
          + setExhaust()
          + setImage()
          + setIntrinsic()
          + upgrade()
          + use()
          + use()
          + use()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      enum OCCUPATION {
        CASTER
        NEUTRAL
        SABER
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      enum RARITY {
        COMMON
        EPIC
        LEGENDARY
        RARE
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      enum TYPE {
        ATTACK
        CURSE
        POWER
        SKILL
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      class gamesource.battleState.card.CreateCard {
          {static} - getCommonCard : double
          {static} - getEpicCard : double
          {static} - getLegendaryCard : double
          {static} - getRareCard : double
          {static} + createCard()
          {static} + getRandomCard()
          {static} - getRandomCommonCard()
          {static} - getRandomEpicCard()
          {static} - getRandomLegendaryCard()
          {static} - getRandomRareCard()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      abstract class gamesource.battleState.card.PowerCard {
          + PowerCard()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.card {
      abstract class gamesource.battleState.card.SkillCard {
          - block : int
          + SkillCard()
          + use()
          + use()
          + use()
      }
    }
  }
  

  gamesource.battleState.card.AttackCard -up-|> gamesource.battleState.card.Card
  gamesource.battleState.card.AttackCard o-- gamesource.battleState.card.AttackCard.PROPERTY : property
  gamesource.battleState.card.AttackCard +-down- gamesource.battleState.card.AttackCard.PROPERTY
  gamesource.battleState.card.Card -up-|> com.jme3.ui.Picture
  gamesource.battleState.card.Card o-- gamesource.battleState.card.Card.OCCUPATION : occupation
  gamesource.battleState.card.Card o-- gamesource.battleState.card.Card.RARITY : rarity
  gamesource.battleState.card.Card o-- gamesource.battleState.card.Card.TYPE : type
  gamesource.battleState.card.Card +-down- gamesource.battleState.card.Card.OCCUPATION
  gamesource.battleState.card.Card +-down- gamesource.battleState.card.Card.RARITY
  gamesource.battleState.card.Card +-down- gamesource.battleState.card.Card.TYPE
  gamesource.battleState.card.PowerCard -up-|> gamesource.battleState.card.Card
  gamesource.battleState.card.SkillCard -up-|> gamesource.battleState.card.Card




@enduml
